# ridgeline

./: .dockerignore  .gitignore  Dockerfile  Escursione_mattutina-angles.json  Morning_Hike.flexpolyline  Morning_Hike.geojson  README.md  Ridgeline Prototype (standalone).html  annotate_blend.py  annotate_final.py  clean_track.py  diag_orient.py  docker-compose.yml  elev_compare.py  export_web_example.py  flex.py  make_svg.py  montage_variations.py  open-dem-post.md  plot3d.py  plot3d_pv.py  poly.py  pyproject.toml  rdp-3d-post.md  stitch_compare.py  trek.py  valley-viewer-controls-coach.patch  verify_orient.py
.codex/: settings.local.json
.github/workflows/: ci.yml  docker.yml
design-docs/: Ridgeline Design System.dc.html  Trek Viewer Wireframes.dc.html
docs/: rust-python-baker-benchmark.md
tools/asset-baker/: MIGRATION-TO-RUST.md  export_web_example.py  requirements-dev.txt  requirements.txt
tools/asset-baker-rs/: .gitignore  Cargo.toml  README.md
tools/asset-baker-rs/src/: cache.rs  config.rs  dem.rs  fetch.rs  gdal_io.rs  gpx.rs  grid.rs  lib.rs  overlays.rs  progress.rs  smooth.rs  texture.rs  trace.rs  write.rs
tools/asset-baker-rs/tests/: gdal_warp.rs  gpx.rs  offline_bakes.rs  pipeline.rs  pure_math.rs  real_data.rs
tools/asset-baker/ridgeline_baker/: __init__.py  gpx.py  otel_worker.py  (+1 more)
web/: README.md  biome.json  gpxImportServer.ts  index.html  otel.node.ts  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/scripts/: capture-readme-media.mjs
web/server/: http.test.ts  http.ts  importJobs.ts  importValidation.test.ts  importValidation.ts  types.ts
web/src/: App.tsx  EntryScreen.tsx  TerrainViewer.tsx  main.tsx  mockData.ts  otel.ts  styles.css  types.ts
(+29 files in other folders)
